test_scores/negative_dimers/features/Q92769.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q92769.pkl.xz